--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=dslist
 
 server.port=8081
 
-spring.profiles.active=${APP_PROFILE:test}
+spring.profiles.active=${APP_PROFILE:dev}
 spring.jpa.open-in-view=false
 
 cors.origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000}
